--- a/public/css/carrete.css
+++ b/public/css/carrete.css
@@ -7,7 +7,7 @@
 .banner {
   width: 100%;
   height: 100vh;
-  background-image: url("img/Fondo.jpg");
+  background-image: url("img/Fondo/ .jpg");
   background-size: cover;
   background-position: center;
 }
