--- a/public/css/carrete.css
+++ b/public/css/carrete.css
@@ -2,6 +2,7 @@
 body {
     margin: 0;
     padding: 0;
+    background: #6a0dad;
     display: flex;
     justify-content: center;
     align-items: center;
